[fix] [0.5.1] - GET /api/v1/poi 필수 파라미터 검증을 @RequestParam(required=true)로 명시
sigunguCode·peopleCount를 명세대로 required=true로 명시해 누락 시 Spring이 바로 거부하도록 함.
filtered 리스트도 이후 변경이 없어 Collectors.toList() 대신 불변 리스트 반환 toList()로 단순화.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>